fix spacings

--- a/style.css
+++ b/style.css
@@ -79,6 +79,10 @@ a::before{
   padding-left: 2.8rem;
 }
 
+.terminal > code+div, .terminal > div+code {
+  margin-top: 1em;
+}
+
 .terminal > h3 {
   position: relative;
   font-size: .9em;
